--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en-GB">
+<html lang="pt-BR">
   <head>
     {% include head.html %}
   </head>
@@ -18,8 +18,8 @@
     </main>
 
     <footer>
-      <p><i>Start a Fucking Blog</i> was created by <a href="https://kevquirk.com">Kev Quirk</a> and is licensed under the MIT license.<br>
-      This site was heavily influenced by <a href="http://bettermotherfuckingwebsite.com">Motherfucking Website</a></p>
+      <p><i>Trivial Tech</i> was created by <a href="https://github.com/diogoodev">Diogo Moura</a> and is licensed under the MIT license.<br>
+      This site was heavily influenced by <a href="https://kevquirk.com">Start a Fucking Blog</a></p>
     </footer>
 
   </body>
